--- a/style.css
+++ b/style.css
@@ -72,5 +72,17 @@ img {
   width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
+
+.rating{
+  padding-left: 200px;
+  padding-top: 30px;
   
+
+}
+
+
+h1{
+  text-align: center;
+  padding-top:30px
+}
 
